--- a/example/Enter.Dashboard/App.razor
+++ b/example/Enter.Dashboard/App.razor
@@ -1,5 +1,4 @@
-﻿@using Enter.Dashboard.Shared
-@namespace Enter.Dashboard
+﻿@namespace Enter.Dashboard
 <EntThemeProvider
     class="h-full"
     Rtl="false"
