--- a/src/Enter.UI/Styles/components/_ent_app_bar.component.scss
+++ b/src/Enter.UI/Styles/components/_ent_app_bar.component.scss
@@ -1,7 +1,7 @@
 :root {
   --ent-appbar-space-y: 1rem;
   --ent-appbar-space-x: 2rem;
-  --ent-appbar-z-index: var(--ent-z-index-top);
+  --ent-appbar-z-index: var(--ent-z-index-tertiary);
   --ent-appbar-bg: var(--ent-bg-body);
   --ent-appbar-border-width: var(--ent-border-width);
   --ent-appbar-border-style: var(--ent-border-style);
