--- a/src/Enter.UI/Styles/components/_ent_nav_menu.component.scss
+++ b/src/Enter.UI/Styles/components/_ent_nav_menu.component.scss
@@ -52,7 +52,7 @@
     > .ent-nav-menu-group-container {
       height: 0;
       overflow: hidden;
-      background-color: $color-light;
+      background-color: $bg-light;
       
       &.active {
         > .ent-nav-menu-item {
