--- a/example/Enter.Dashboard/Components/FormLayout.razor
+++ b/example/Enter.Dashboard/Components/FormLayout.razor
@@ -17,7 +17,9 @@
                 </EntInputGroup>
                  <EntInputGroup For="()=>Input.User" Label="نام" class="tablet:col-1/3 mb-4">
                   
-                    <EntInputAutoComplete @bind-Value="Input.User"
+                     <EntInputAutoComplete
+                          @ref="_autoCompleteReference"
+                         @bind-Value="Input.User"
                                           ValueFunc="x=>x.Name"
                                           TextFunc="x=>x.Name"
                                           DataSources="DataSource"
@@ -57,6 +59,8 @@
 
 @code {
 
+    public EntInputAutoComplete<Users> _autoCompleteReference { get; set; }
+    
     public class InputModel
     {
         public string Id { get; set; } = Guid.NewGuid().ToString();
@@ -80,6 +84,7 @@
 
     private async Task OnSubmit()
     {
+        await _autoCompleteReference.FocusAsync();
         Input.Role = "Developer";
         StateHasChanged();
         Console.WriteLine(Input.User);
