--- a/example/Enter.Dashboard/Components/Table.razor
+++ b/example/Enter.Dashboard/Components/Table.razor
@@ -1,5 +1,4 @@
-﻿@using System.ComponentModel.DataAnnotations
-@using Enter.Dashboard.Model
+﻿@using Enter.Dashboard.Model
 <EntCard class="m-4" Title="صفحه فرم">
     <CardBody>
         <EntTable DataSources="DataSource" Total="Constants.Users.Count" Take="_take" OnPaginationChange="OnPaginationChange">
