--- a/src/Enter.UI/Styles/components/_components.scss
+++ b/src/Enter.UI/Styles/components/_components.scss
@@ -1,4 +1,5 @@
 ﻿@import "ent_button.component";
+@import "ent_messagebox.component";
 @import "ent_tab.component";
 @import "ent_toolbar.component";
 @import "ent_app_bar.component";
