--- a/src/Enter.UI/Styles/components/_ent_drawer.component.scss
+++ b/src/Enter.UI/Styles/components/_ent_drawer.component.scss
@@ -2,7 +2,7 @@
 
 :root {
   --ent-drawer-width : 20rem;
-  --ent-drawer-z-index: var(--ent-z-index-secondary);
+  --ent-drawer-z-index: var(--ent-z-index-tertiary);
   --ent-drawer-bg: var(--ent-bg-body);
   --ent-drawer-box-shadow: 0px 1px 9px -3px rgba(0, 0, 0, 0.05);
   --ent-drawer-border-color: var(--ent-border-color);
