--- a/src/Enter.UI/Styles/components/_ent_overlay.component.scss
+++ b/src/Enter.UI/Styles/components/_ent_overlay.component.scss
@@ -10,8 +10,7 @@
   display: flex;
   position: fixed;
   transition: .3s cubic-bezier(.25,.8,.5,1),z-index 1ms;
-  z-index: 5;
-
+  z-index: var(--ent-z-index-emphasis);
   &.ent-overlay-absolute {
     position: absolute;
   }
