--- a/src/Enter.Ui.Froala/EntFroala.razor
+++ b/src/Enter.Ui.Froala/EntFroala.razor
@@ -16,7 +16,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        await FroalaInterop.InitializeFroala(JSRuntime);
+        
     }
 
     protected override async Task
@@ -24,9 +24,10 @@
     {
         if (firstRender)
         {
-            await FroalaInterop.CreateFroala(
-                JSRuntime,
-                QuillElement);
+            await FroalaInterop.InitializeFroala(JSRuntime);
+            // await FroalaInterop.CreateFroala(
+            //     JSRuntime,
+            //     QuillElement);
         }
     }
 
